# parallel-algorithms

./: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  sort.py  sort_basic_algorithms.py  sort_mlx.py  test_fixes.py  test_setup.py  utils.py
.claude/: settings.json
rust-parallel/: .gitignore  Cargo.toml
rust-parallel/src/: lib.rs
src/: lib.rs
