[project]
name = "parallel-algorithms"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

dependencies = [
    "filelock==3.19.1",
    "fsspec==2025.7.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mlx==0.28.0",
    "mlx-metal==0.28.0",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.2",
    "polars",
    "psutil==7.0.0",
    "setuptools==80.9.0",
    "sympy==1.14.0",
    "torch==2.8.0",
    "typing==3.10.0.0",
    "typing-extensions==4.14.1",
    "maturin",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
